initiate web extension

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,8 @@
   </li>
 </ul>
 
+<!--<section>-->
+  <!--<div class="container" style="max-width: 1840px;">-->
+    <!--<router-outlet></router-outlet>-->
+  <!--</div>-->
+<!--</section>-->
