display content to the extension

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,35 @@
-<p>
-  homepage works!
-</p>
+<section class="container py-4">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Tabs</h2>
+      <ul id="tabsJustified" class="nav nav-tabs">
+        <li class="nav-item"><a href="" data-target="#messages1" data-toggle="tab" class="nav-link small text-uppercase "> <span class="float-right badge badge-pill badge-danger" style="margin-left: 5px;">8</span> Messages</a> </li>
+        <li class="nav-item"><a href="" data-target="#profile1" data-toggle="tab" class="nav-link small text-uppercase ">Notifications</a></li>
+        <li class="nav-item"><a href="" data-target="#messages1" data-toggle="tab" class="nav-link small text-uppercase active">Messages</a></li>
+      </ul>
+      <br>
+      <div id="tabsJustifiedContent" class="tab-content">
+        <div id="home1" class="tab-pane fade">
+          <div class="list-group">
+            <a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">51</span> Home Link</a>
+            <a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">8</span> Link 2</a>
+            <a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">23</span> Link 3</a>
+            <a href="" class="list-group-item d-inline-block text-muted">Link n..</a></div>
+        </div>
+        <div id="profile1" class="tab-pane fade active show">
+          <div class="row pb-2">
+            <div class="col-md-7">
+              <p>Tabs can be used to contain a variety of content &amp; elements. They are a good way to group <a href="" class="link">relevant content</a>. Display initial content in context to the user. Enable the user to flow through
+                <a href="" class="link">more</a> information as needed.
+              </p>
+            </div>
+            <div class="col-md-5"><img src="//dummyimage.com/1005x559.png/5fa2dd/ffffff" class="float-right img-fluid img-rounded"></div>
+          </div>
+        </div>
+        <div id="messages1" class="tab-pane fade">
+          <div class="list-group"><a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">44</span> Message 1</a> <a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">8</span> Message 2</a>                            <a href="" class="list-group-item d-inline-block"><span class="float-right badge badge-pill badge-dark">23</span> Message 3</a> <a href="" class="list-group-item d-inline-block text-muted">Message n..</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
