--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="container">
-    <h1>Welcome</h1>
+    <h1> <span> <img src="./assets/dhisi.jpg" alt="" style="border-radius: 50%;width: 80px;"> </span> Notifications</h1>
 
     <form class="form" name="formLogin" >
       <input type="text"  name="link" [(ngModel)]="link" >
